Zone API integrated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
 
     implementation 'com.amazonaws:aws-android-sdk-core:2.22.1'
     implementation 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.22.1'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
 }
